2010-03-16 0.72 - H.Merijn Brand   <h.m.brand@xs4all.nl>

    * Introduce quote_null attribute (RT#55200)
    * examples/csv-check can be used for Text::CSV_PP
    * examples/csv-check more options for sep_, escape_ and quote_char
    * examples/csv2xls more options for sep_, escape_ and quote_char
    * examples/csv2xls added auto_diag and verbosity
    * Dropped YAML spec to 1.0

2010-02-15 0.71 - H.Merijn Brand   <h.m.brand@xs4all.nl>

    * Upped copyright to 2010
    * Prevent double encoding: make Text::CSV_XS streams behave just
      like perl would (thanks ikegami for the test cases)
    * Text::CSV_XS->error_diag () in void context now warns instead of
      doing nothing
    * auto_diag also used for new () itself

2009-12-02 0.70 - H.Merijn Brand   <h.m.brand@xs4all.nl>

    * Add quote_space attribute
    * Forbid \r and \n in sep_char, quote_char, and escape_char

2009-10-10 0.69 - H.Merijn Brand   <h.m.brand@xs4all.nl>

    * Missing end quotes in error code docs
    * examples/csv-check now shows detected eol
    * Auto detection of eol => "\r" in streams
    * Optimized caching. All cache changes now in XS

2009-10-04 0.68 - H.Merijn Brand   <h.m.brand@xs4all.nl>

    * Attribute auto_diag now localizes to +1 if autodie is active
    * Output name generation in csv2xls (RT#48954)
    * Added csvdiff to examples/
    * Reordered docs. Rewrote SYNOPSIS to be more like a real-world
      code example

2009-08-08 0.67 - H.Merijn Brand   <h.m.brand@xs4all.nl>

    * Fix empty_diag typo for attribute handler
    * Fix AUTOMATED_TESTING erroneous skip

2009-08-07 0.66 - H.Merijn Brand   <h.m.brand@xs4all.nl>

    * Reordered examples in doc to show best method first
    * Documentation grammatical fix (John P. Linderman, RT#46411)
    * Fail if first arg to new () is not a hash ref
    * Implement empty_is_undef on request of Evan Carroll
    * Typo in documentation (Herwin Weststrate, RT#47613)