@@ -30,7 +30,7 @@ use DynaLoader ();
 use Carp;
 
 use vars   qw( $VERSION @ISA );
-$VERSION = "0.72";
+$VERSION = "0.73";
 @ISA     = qw( DynaLoader );
 bootstrap Text::CSV_XS $VERSION;
 
@@ -1514,6 +1514,11 @@ Returning something like
 The hard-coding of characters and character ranges makes this module
 unusable on EBCDIC system. Using some #ifdef structure could enable
 these again without loosing speed. Testing would be the hard part.
+
+Opening EBCDIC encode files on ASCII+ systems is likely to succeed
+using Encode's cp37, cp1047, or posix-bc:
+
+  open my $fh, "<:encoding(cp1047)", "ebcdic_file.csv" or die "...";
 
 =back
 
