@@ -6,7 +6,7 @@
 
     ppport.h -- Perl/Pollution/Portability Version 3.19
 
-    Automatically created by Devel::PPPort running under perl 5.010000.
+    Automatically created by Devel::PPPort running under perl 5.012000.
 
     Do NOT edit this file directly! -- Edit PPPort_pm.PL and the
     includes in parts/inc/ instead.
