@@ -47,15 +47,15 @@ for ( [  1, 1, 1, '""'				],
       ) {
     my ($tst, $validp, $validg, @arg, $row) = @$_;
 
-    open  $io, ">_test.csv" or die "_test.csv: $!";
+    open  $io, ">_21test.csv" or die "_21test.csv: $!";
     is ($csv->print ($io, \@arg), $validp||"", "$tst - print ()");
     close $io;
 
-    open  $io, ">_test.csv" or die "_test.csv: $!";
+    open  $io, ">_21test.csv" or die "_21test.csv: $!";
     print $io join ",", @arg;
     close $io;
 
-    open  $io, "<_test.csv" or die "_test.csv: $!";
+    open  $io, "<_21test.csv" or die "_21test.csv: $!";
     $row = $csv->getline ($io);
     unless ($validg) {
 	is ($row, undef, "$tst - false getline ()");
@@ -69,12 +69,12 @@ for ( [  1, 1, 1, '""'				],
 	}
     }
 
-unlink "_test.csv";
+unlink "_21test.csv";
 
 # This test because of a problem with DBD::CSV
 
 ok (1, "Tests for DBD::CSV");
-open  $io, ">_test.csv" or die "_test.csv: $!";
+open  $io, ">_21test.csv" or die "_21test.csv: $!";
 $csv->binary (1);
 $csv->eol    ("\r\n");
 ok ($csv->print ($io, [ "id", "name"			]), "Bad character");
@@ -94,14 +94,14 @@ id,name\015
 5\015
 CONTENTS
 
-open  $io, "<_test.csv" or die "_test.csv: $!";
+open  $io, "<_21test.csv" or die "_21test.csv: $!";
 my $content = do { local $/; <$io> };
 close $io;
 is ($content, $expected, "Content");
-open  $io, ">_test.csv" or die "_test.csv: $!";
+open  $io, ">_21test.csv" or die "_21test.csv: $!";
 print $io $content;
 close $io;
-open  $io, "<_test.csv" or die "_test.csv: $!";
+open  $io, "<_21test.csv" or die "_21test.csv: $!";
 
 my $fields;
 print "# Retrieving data\n";
@@ -139,10 +139,10 @@ for ([  1, 1,    0, "\n"		],
      [ 22, 0, 2025, qq{"+\r\r+"\r}	],
      ) {
     my ($tst, $valid, $err, $str) = @$_;
-    open  my $io, ">_test.csv" or die "_test.csv: $!";
+    open  my $io, ">_21test.csv" or die "_21test.csv: $!";
     print $io $str;
     close $io;
-    open  $io, "<_test.csv" or die "_test.csv: $!";
+    open  $io, "<_21test.csv" or die "_21test.csv: $!";
     my $row = $csv->getline ($io);
     close $io;
     my @err  = $csv->error_diag;
@@ -155,4 +155,4 @@ for ([  1, 1,    0, "\n"		],
 	}
     }
 
-unlink "_test.csv";
+unlink "_21test.csv";
