@@ -324,14 +324,14 @@ foreach my $bin (0, 1) {
 	}
 
     ok (1, "verbatim on getline (*FH)");
-    open  FH, ">_test.csv";
+    open  FH, ">_65test.csv";
     print FH @str, "M^Abe^*\r\n";
     close FH;
 
     foreach $gc (0, 1) {
 	$csv->verbatim ($gc);
 
-	open FH, "<_test.csv";
+	open FH, "<_65test.csv";
 
 	my $row;
 	ok ($row = $csv->getline (*FH),		"#\\r\\n $gc getline");
@@ -358,27 +358,27 @@ foreach my $bin (0, 1) {
 	verbatim	=> 1,
 	eol		=> "#\r\n",
 	});
-    open  FH, ">_test.csv";
+    open  FH, ">_65test.csv";
     print FH $str[1];
     close FH;
-    open  FH, "<_test.csv";
+    open  FH, "<_65test.csv";
     is ($csv->getline (*FH), undef,	"#\\r\\n $gc getline 2030");
     is (0 + $csv->error_diag, 2030,	"Got 2030");
     close FH;
 
-    unlink "_test.csv";
+    unlink "_65test.csv";
     }
 
 {   ok (1, "keep_meta_info on getline ()");
 
     my $csv = Text::CSV_XS->new ({ eol => "\n" });
 
-    open  FH, ">_test.csv";
+    open  FH, ">_65test.csv";
     print FH qq{1,"",,"Q",2\n};
     close FH;
 
     is ($csv->keep_meta_info (0), 0,		"No meta info");
-    open  FH, "<_test.csv";
+    open  FH, "<_65test.csv";
     my $row = $csv->getline (*FH);
     ok ($row,					"Get 1st line");
     $csv->error_diag ();
@@ -386,19 +386,19 @@ foreach my $bin (0, 1) {
     is ($csv->is_quoted (3), undef,		"Is field 3 quoted?");
     close FH;
 
-    open  FH, ">_test.csv";
+    open  FH, ">_65test.csv";
     print FH qq{1,"",,"Q",2\n};
     close FH;
 
     is ($csv->keep_meta_info (1), 1,		"Keep meta info");
-    open  FH, "<_test.csv";
+    open  FH, "<_65test.csv";
     $row = $csv->getline (*FH);
     ok ($row,					"Get 2nd line");
     $csv->error_diag ();
     is ($csv->is_quoted (2), 0,			"Is field 2 quoted?");
     is ($csv->is_quoted (3), 1,			"Is field 3 quoted?");
     close FH;
-    unlink "_test.csv";
+    unlink "_65test.csv";
     }
 
 {   my $csv = Text::CSV_XS->new ({});
