@@ -11,7 +11,7 @@ BEGIN {
     plan skip_all => "Cannot load Text::CSV_XS" if $@;
     }
 
-my $csv_file = "_test.csv";
+my $csv_file = "_70test.csv";
 END { unlink $csv_file }
 
 my ($rt, %input, %desc);
