@@ -1,3 +1,11 @@
+2010-05-03 0.73 - H.Merijn Brand   <h.m.brand@xs4all.nl>
+
+    * Improve date conversion in examples/csv2xls
+      new option -D allows column selection for date conversions
+    * Tested under perl-5.12.0 (and 21 other versions of perl)
+    * Added a note about EBCDIC data files
+    * Test suite is now safe for parallel test (prove --shuffle -j6)
+
 2010-03-16 0.72 - H.Merijn Brand   <h.m.brand@xs4all.nl>
 
     * Introduce quote_null attribute (RT#55200)
